# Chip-8

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  chip8.c  chip8.h  emulator.c  main.c
.github/workflows/: chip8_handlers_tests.yaml
_old/: chip8.c  chip8.h  emulator.h
include/: chip8.h  chip8_handlers.h  emulator.h  io.h
src/: chip8.c  chip8_handlers.c  emulator.c  io.c
tests/src/: test_chip8_handlers.c
